Code clean up (Java8).